<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/exercice3Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469" />

        <Button
            android:id="@+id/exercice8Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.758"
            app:layout_constraintStart_toEndOf="@+id/exercice7Button2"
            app:layout_constraintTop_toBottomOf="@+id/exercice6Button"
            app:layout_constraintVertical_bias="0.143" />

        <Button
            android:id="@+id/exercice7Button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercice6Button"
            app:layout_constraintVertical_bias="0.143" />

        <Button
            android:id="@+id/exercice6Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercice4Button"
            app:layout_constraintVertical_bias="0.184" />

        <Button
            android:id="@+id/exercice5Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exercice3Button"
            app:layout_constraintVertical_bias="0.184" />

        <Button
            android:id="@+id/exercice4Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/exercice3Button"
            app:layout_constraintTop_toBottomOf="@+id/exercice2Button"
            app:layout_constraintVertical_bias="0.367" />

        <Button
            android:id="@+id/exercice1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex1"
            app:layout_constraintBottom_toTopOf="@+id/exercice3Button"
            app:layout_constraintEnd_toStartOf="@+id/exercice2Button"
            app:layout_constraintHorizontal_bias="0.427"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.224" />

        <Button
            android:id="@+id/exercice2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ex2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>